<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appenjoyer.eda.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llmain"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sistemaevaluacions"
            android:id="@+id/tvTitleProvesEscrites" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_percentatge_examens"
            android:id="@+id/textView" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true" android:focusableInTouchMode="true"
            android:id="@+id/LinearPrimeraProva">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:id="@+id/tvTitlePrimeraProva"
                android:text="@string/title_primera_prova" />
            <EditText
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditTextTheme"
                android:id="@+id/etPe1"
                android:hint="@string/hint_00" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:focusable="true" android:focusableInTouchMode="true"
        android:id="@+id/LinearSegonaProva">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:id="@+id/tvTitleSegonaProva"
            android:text="@string/title_segona_prova" />
        <EditText
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:id="@+id/etPe2"
            android:hint="@string/hint_00" />
    </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LinearQualificacioProva">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleTeo"
                android:text="@string/title_qualificacio_teoria" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTeo"
                android:layout_marginLeft="8dp"
                 />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_percentatge_practiques"
            android:id="@+id/tvTitlePr_i"
            android:layout_marginTop="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="4"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_practica1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_practica2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_practica3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_practica4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="4"
            android:focusable="true" android:focusableInTouchMode="true"
            android:orientation="horizontal" android:id="@+id/linearLayout">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPr_1"
                android:hint="@string/hint_00"
                android:theme="@style/MyEditTextTheme"
                android:layout_weight="1" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPr_2"
                android:hint="@string/hint_00"
                android:theme="@style/MyEditTextTheme"
                android:layout_weight="1" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPr_3"
                android:hint="@string/hint_00"
                android:theme="@style/MyEditTextTheme"
                android:layout_weight="1" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPr_4"
                android:hint="@string/hint_00"
                android:theme="@style/MyEditTextTheme"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:id="@+id/LinearQualificacioTeoria">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qualificacio_practiques"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPr"
                android:layout_marginLeft="8dp"
                />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:id="@+id/LinearQualificacioteoriaPractiques">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/title_qualificiacio_ponderada_tp"
                android:id="@+id/textView3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvQPT"
                android:layout_marginLeft="8dp"
                 />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true" android:focusableInTouchMode="true"
            android:id="@+id/LinearPercentatge">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"

                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:layout_weight="1"
                android:text="@string/title_percentatge_assistencia"
                android:id="@+id/textView4" />
            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPctAs"
                android:clickable="false"
                android:text="@string/hint_00"
                android:focusable="false"
                android:theme="@style/MyEditTextTheme" />
            <ImageView
                android:layout_width="30dp"
                android:layout_marginTop="5dp"
                android:layout_height="30dp"
                android:id="@+id/ivGetPAs"
                android:src="@drawable/percentage"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>


</RelativeLayout>
